# Presentation-Intelligence-Tool

./: .env.example  .gitignore  README.md  app.py  isnstruct.md  pyproject.toml  requirements.txt
examples/: README.md  api_example.py  api_example.sh  batch_analysis.py
prompts/: network_engineer.json  presales_engineer.json  security_analyst.json
static/css/: style.css
templates/: index.html  results.html
utils/: ai_analyzer.py  ai_client.py  claude_analyzer.py  document_parser.py  output_generator.py  prompt_loader.py  url_downloader.py  web_scraper.py
