[project]
name = "summerizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "flask==3.0.0",
    "markdown2==2.4.10",
    "pillow==10.0.0",
    "pymupdf>=1.24.0",
    "python-dotenv==1.0.0",
    "python-pptx==0.6.23",
    "requests>=2.31.0",
    "weasyprint>=61.0",
    "werkzeug==3.0.0",
]

[project.optional-dependencies]
# AI Provider options - install the one(s) you need
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
google = ["google-generativeai>=0.3.0"]
ollama = ["ollama>=0.1.0"]
xai = ["openai>=1.0.0"]  # xAI uses OpenAI-compatible API
all-providers = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
]
